# alma

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  benchmark.py  infer.py  ipdb_hook.py  pyproject.toml  qconfigs.py  requirements.txt  runner.Dockerfile  setup-data.sh  setup.py  train.py
.github/scripts/: device_check_agg.py
.github/workflows/: benchmark.yml  device-check.yml  ensure-semver-label.yml  unit_tests.yml  version-bump.yml  version_bump.yml  version_bump2.yml
arguments/: benchmark_args.py  infer_args.py  train_args.py
conversions/: __init__.py  compile.py  config.py  onnx.py  select.py  utils.py
conversions/export/: aotinductor.py  compile.py  eager.py  quant.py  utils.py
data/: loaders.py  transforms.py  utils.py
docker/: entrypoint.sh
examples/: README.md
examples/linear/: README.md  benchmark_random_tensor.py  notebook.ipynb
examples/llama_3/: README.md  benchmark_with_dataloader.py  data.py
examples/llm/: benchmark_with_dataloader.py  data.py
examples/mnist/: README.md  benchmark.py  benchmark_rand_tensor.py  benchmark_random_tensor.py  benchmark_with_dataloader.py  mem_efficient_benchmark_rand_tensor.py  train.py
model/: model.py
quantization/: PTQ.py  QAT.py  qconfigs.py  quantize.py  utils.py
scripts/: build_docker.sh  build_runner.sh  run_docker.sh  run_runner.sh
src/alma/: __init__.py  benchmark.py  benchmark_model.py  constants.py
task/: README.md  infer.py  requirements.txt  train.py
utils/: load_model.py  setup_logging.py  times.py
(+97 files in other folders)
